# homebrew-macocr

./: README.md  macocr.rb  noxfile.py  ocr.py  pyproject.toml  requirements.txt  test.py
images/: img_vert02.HEIC
results/: img_horz01.txt  img_vert01.txt  img_vert02.txt
src/macocr/: main.py
